# MagOp-project

./: .gitignore  CMakeLists.txt  MagOp_app  main.cpp
ai_output/: SCAN_20260308_223751.txt
include/: ai_processing.h  backend_controller.h  camera_handler.h
src/: ai_processing.cpp  backend_controller.cpp  camera_handler.cpp  mian.cpp
ui/: mainwindow.cpp  mainwindow.h
